tests/ui/traits/next-solver/issue-118950-root-region.stderr
error[E0425]: cannot find type `Missing` in this scope
  --> $DIR/issue-118950-root-region.rs:18:55
   |
LL | impl<T> Overlap<for<'a> fn(Assoc<'a, T>)> for T where Missing: Overlap<T> {}
   |                                                       ^^^^^^^ not found in this scope

error[E0277]: the trait bound `*const T: ToUnit<'a>` is not satisfied
  --> $DIR/issue-118950-root-region.rs:13:1
   |
LL | type Assoc<'a, T> = <*const T as ToUnit<'a>>::Unit;
   | ^^^^^^^^^^^^^^^^^ the trait `ToUnit<'a>` is not implemented for `*const T`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-118950-root-region.rs:7:1
   |
LL | trait ToUnit<'a> {
   | ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0425.
For more information about an error, try `rustc --explain E0277`.
